
* Map keypad keys, and use terminfo rather than termcap since keypad
  definitions don't exist in termcap (github #650).

* Change HOME key to scroll fully left and END key to scroll fully right.
  Add shift-HOME and ctrl-HOME to scroll left and jump to top, and
  add shift-END and ctrl-END to scroll right and jump to end (github #658).

* Add LESSNOCONFIG environment variable.

* When setting line number colors (-DN), don't force bold attribute.
  To set bold, you must append "d" or "*" to the color string (github #684).

* While waiting for file data, only ^C or ^X will interrupt, not any command.
  This reverts to behavior that existed before less-670 (github #700).

* When --save-marks is not used, retain any marks saved in the history file
  (github #662).

* Defer sending the terminal init string until the first char is read
  from the input file (github #682).

* Make SIGHUP do an orderly exit like SIGTERM.

* Fix bugs and improve behavior of screen resize on Windows.

* Fix bug when entering search modifier key at start of non-empty 
  search string (github #668).

* Fix bug repainting screen with --form-feed (github #672).

* Fix bugs passing invalid negative values to some command line
  options (github #675).

* Fix incorrect display of Lit indicator (github #670).

* Fix incorrect display when returning to a mark after resizeing window
  (github #681).

* Disallow mouse click to open OSC8 link in SECURE mode (github #676).

* Update Unicode tables.

======================================================================

	Major changes between "less" versions 679 and 685

* Add --cmd option (github #624).

* Add LESS_TERMCAP_SUSPEND and LESS_TERMCAP_RESUME (github #654).

* Change --incsearch so that after typing each character of the pattern,
  the search begins at the position where the search command was invoked,
  not the current position (github #640).

* Allow mixing of option arguments and filename arguments on the