@@ -1422,6 +1422,12 @@ public void commands(void)
 		}
 
 		/*
+		 * See if window size changed, for systems that don't
+		 * generate SIGWINCH.
+		 */
+		check_winch();
+
+		/*
 		 * Display prompt and accept a character.
 		 */
 		cmd_reset();
