@@ -677,3 +677,12 @@ unsigned long lstrtoulc(constant char*, constant char**, int);
 #if MSDOS_COMPILER==WIN32C
 int pclose(FILE*);
 #endif
+#if !HAVE_STRCHR
+char * strchr(char *s, char c);
+#endif
+#if !HAVE_MEMCPY
+void * memcpy(void *dst, constant void *src, size_t len);
+#endif
+#if !HAVE_STRSTR
+char * strstr(constant char *haystack, constant char *needle);
+#endif
