@@ -30,6 +30,8 @@
 
 * Add LESSNOCONFIG environment variable.
 
+* Add --without-termlib to configure (github #701).
+
 * When setting line number colors (-DN), don't force bold attribute.
   To set bold, you must append "d" or "*" to the color string (github #684).
 
@@ -43,6 +45,8 @@
   from the input file (github #682).
 
 * Make SIGHUP do an orderly exit like SIGTERM.
+
+* Implement modeline handling in Windows build.
 
 * Fix bugs and improve behavior of screen resize on Windows.
 
@@ -59,7 +63,11 @@
 * Fix incorrect display when returning to a mark after resizeing window
   (github #681).
 
+* Fix bug using --pattern with --incsearch (github #696).
+
 * Disallow mouse click to open OSC8 link in SECURE mode (github #676).
+
+* Add SECURE_COMPILE environment variable for Windows builds.
 
 * Update Unicode tables.
 
